fix: dark mode no results styling

--- a/src/components/noResultsCard/noResults.scss
+++ b/src/components/noResultsCard/noResults.scss
@@ -10,11 +10,4 @@
   border-radius: 1rem;
   box-shadow: 0 0 20px 2px #0002;
   z-index: 2;
-
-  h2 {
-    font-size: 20px;
-    font-weight: 500;
-    color: var(--chakra-colors-red-400);
-    margin-bottom: 30px;
-  }
 }
