--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -35,6 +35,7 @@
   --secondary-text: #999999;
   --primary-text: #292929;
   --black: #292929;
+  --other-light-text: #D9D9D9;
   --accent: #f7931a;
   --gradient: linear-gradient(92.78deg, #e8782b 0%, #f6a73f 101.1%);
   --shadow-left:linear-gradient(90deg, #FAFAFA 50.33%, rgba(250, 250, 250, 0) 100%);
